# SafeCppAny

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SafeVariantNumber.h  check_limits.h  visitors.h
benchmark/: benchmark.cpp
cmake/: FindPocoLib.cmake  Findbenchmark.cmake
include/SafeAny/: safe_any.hpp
include/VariantNumber/: typeid.h  variant.h
include/VariantNumber/details/: check_limits.h  conversion_impl.h  exceptions.h  variant_impl.h  visitors.h
test/: catch.hpp  test_safeany.cpp  test_variantnumber.cpp
